@@ -1,8 +1,8 @@
 Package: oceanmap
 Type: Package
 Title: A Plotting Toolbox for 2D Oceanographic Data
-Version: 0.0.8
-Date: 2017-06-21
+Version: 0.0.9
+Date: 2017-07-03
 Author: Robert K. Bauer
 Maintainer: Robert K. Bauer <robert.bauer@ird.fr>
 Depends: R (>= 2.10), maps, mapdata, raster, extrafont
@@ -10,8 +10,8 @@ Imports: abind, fields, marmap, plotrix, methods, utils, grDevices,
         maptools, sp, ncdf4, stats
 Description: Plotting toolbox for 2D oceanographic data (satellite data, sst, chla, ocean fronts & bathymetry). Recognized classes and formats include ncdf4, Raster, '.nc' and '.gz' files.
 License: GPL (>= 3)
-Packaged: 2017-06-21 11:40:36 UTC; robert
+Packaged: 2017-07-03 10:40:22 UTC; robert
 NeedsCompilation: no
 Repository: CRAN
-Date/Publication: 2017-06-21 15:12:44 UTC
+Date/Publication: 2017-07-03 13:45:39 UTC
 SystemRequirements: ImageMagick
